# scribus-indigo

./: .directory  .travis.yml  CMakeLists.txt  README.md  Scribus.pro
AppImage-package/: bundle.sh
resources/iconsets/: CMakeLists.txt
resources/iconsets/1_5_1/: 1_5_1.xml
resources/iconsets/1_5_1_light/: 1_5_1.xml  1_5_1_light.xml  Hoch.xpm  Kapital.xpm  Stift.xpm  Stift16.xpm  Strike.xpm  Tief.xpm  Unter.xpm  Zeichen.xpm
scribus/: CMakeLists.txt  actionmanager.cpp  actionmanager.h  canvas.cpp  canvasmode.cpp  canvasmode_edit.cpp  canvasmode_editarc.cpp  canvasmode_editgradient.cpp  canvasmode_editmeshgradient.cpp  canvasmode_editmeshpatch.cpp  canvasmode_editpolygon.cpp  canvasmode_editspiral.cpp  canvasmode_editweldpoint.cpp  canvasmode_nodeedit.cpp  iconmanager.cpp  iconmanager.h  pdfwriter.cpp  prefsmanager.cpp  prefsstructs.h  scpaths.cpp  scplugin.cpp  scplugin.h  scraction.cpp  scraction.h  scribus.cpp  scribus.cpp.autosave  scribus.css  scribus.h  scribus_dark.css  scribus_dark.xml  scribus_darker.css  scribus_darker.xml  scribus_light.css  scribus_light.xml  scribusapp.cpp  scribusapp.cpp.autosave  scribuscore.cpp  scribuscore.h  scribusdoc.cpp  thememanager.cpp  (+3 more)
scribus/plugins/barcodegenerator/: barcode.cpp
scribus/plugins/gettext/xtgim/: xtgscanner.cpp
scribus/plugins/scriptplugin/scripts/: Autoquote.py  Autoquote2.py
scribus/plugins/shapes/: shapepalette.cpp  shapepalette.h  shapeplugin.cpp
scribus/text/: boxes.cpp  textlayout.cpp  textshaper.cpp  textshaper.h
scribus/ui/: .directory  about.cpp  aligndistribute.cpp  arcvectordialog.h  autoform.cpp  autoform.h  autoformbuttongroup.cpp  autoformbuttongroup.h  basepointwidget.cpp  bookmarkpalette.cpp  bookmarkpalette.h  colorlistbox.cpp  colorlistbox.h  gradientpreview.cpp  griphandle.cpp  griphandle.h  hruler.cpp  indigodock.cpp  indigodock.h  indigodockmanager.cpp  indigodockmanager.h  indigopanel.cpp  indigopanel.cpp.autosave  indigopanel.h  indigotabbar.cpp  indigotabbar.h  inlinepalette.cpp  inlinepalette.h  layers.cpp  layers.h  outlinepalette.cpp  outlinepalette.h  pagepalette.cpp  pagepalette.h  pageselector.cpp  paintmanager.cpp  prefs_display.cpp  prefs_display.h  prefs_displaybase.ui  prefs_documentitemattributes.cpp  (+41 more)
